2005-11-26  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* timidity/timidity.c (parse_opt_i): fix for possible null-pointer
	  dereference when interface plugin is not found.

2005-11-26 Stas Sergeev <stsp@aknet.ru>
	* interface/ncurs_c.c, interface/dumb_c.c, interface/slang_c.c,
	  interface/tk_c.c, interface/emacs_c.c, interface/xskin_c.c,
	  interface/gtk_c.c, interface/server_c.c, interface/alsaseq_c.c,
	  interface/dynamic_c.c, timidity/controls.h, timidity/tables.c,
	  timidity/raw_a.c, timidity/controls.c, timidity/flac_a.c,
	  timidity/vorbis_a.c, timidity/au_a.c, timidity/wave_a.c,
	  timidity/aiff_a.c, timidity/speex_a.c:
	  warn when output to stdout makes no sense

2005-11-15  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* timidity/sysdep.h: [timidity-bugs-en:61] Add stdint.h check

2005-11-02  Kentaro Sato <kentaro@ranvis.com>

	* timidity/playmidi.c: Changed sustained notes not to drop
	  when opt_overlap_voice_allow is enabled.
	* interface/rtsyn.h: Added #ifdef for <sys/types.h>.

2005-11-01  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* doc/ja_JP.eucJP/README.tk : not -itt but -ikt
	  (thanks AOKI Taichi @naist)

2005-10-31  Stas Sergeev <stsp@aknet.ru>

	* interface/server_c.c : fix for timing bugs

2005-10-31  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Change a bit

2005-10-31  Keishi Suenaga <s_keishi@mutt.freemail.ne.jp>

	* Makefile.am, configure.in, doc/C/README.w32, timidity/Makefile.am,
	  timidity/timidity.c: Changed files
	* windrv/Makefile.am, windrv/dlldata.c, windrv/oemsetup.inf,
	  windrv/timiditydrv.cpp, windrv/timiditydrv.def,
	  windrv/timiditydrv.h, windrv/timiditydrv.i,
	  windrv/timiditydrv.idl, windrv/timiditydrv.inf,
	  windrv/timiditydrv_i.c, windrv/timiditydrv_p.c,
	  windrv/timiwp_timidity.c, windrv/timiwp_timidity.h:
	  Windows Driver merged (New files)

2005-10-31  Keishi Suenaga <s_keishi@mutt.freemail.ne.jp>

	* timidity/portaudio_a.c: for ASIO4ALL fix